<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_button2"
        tools:ignore="SpeakableTextPresentCheck"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ico_back" />

    <ImageButton
        android:id="@+id/close_"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="320dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/line_"
        android:layout_width="299dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Monthly -->

    <!-- Clear all filters -->

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="355dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="780dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter"
        android:layout_width="302dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="784dp"
        android:fontFamily="@font/jost"
        android:gravity="center_horizontal|top"
        android:text="Back"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/select_bran"
        android:layout_width="299dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="136dp"
        android:foreground="@drawable/select_bran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nissan -->
    <Button
        android:id="@+id/nissan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="208dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/jost"
        android:gravity="top"
        android:text="@string/nissan"
        android:textAppearance="@style/nissan"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Toyota -->
    <Button
        android:id="@+id/toyota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="256dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/jost"
        android:gravity="top"
        android:text="@string/toyota"
        android:textAppearance="@style/toyota"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/honda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="304dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/jost"
        android:gravity="top"
        android:text="@string/honda"
        android:textAppearance="@style/honda"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tesla"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="352dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/jost"
        android:gravity="top"
        android:text="@string/tesla"
        android:textAppearance="@style/tesla"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/suzuki"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="400dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/jost"
        android:gravity="top"
        android:text="@string/suzuki"
        android:textAppearance="@style/suzuki"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bmw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="448dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/jost"
        android:gravity="top"
        android:text="@string/bmw"
        android:textAppearance="@style/bmw"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/volkswagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="496dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/jost"
        android:gravity="top"
        android:text="@string/volkswagen"
        android:textAppearance="@style/volkswagen"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>